# april-asr

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  COPYING  LICENSE.md  README.md  april-asr.pc.in  april.c  april.h  april_api.h  aprilasr.pc.in  concepts.html  csharp.html  download_onnx.sh  download_onnx_linux_x64.sh  download_onnx_windows_x64.sh  example.cpp  example_srt.cpp  flake.nix  index.html  main.cpp  models.html  ort_util.h  print.html  python.html  rt_stress.cpp  searchindex.js  searchindex.json  tokens.h
.github/workflows/: deploy.yml  main.ci.yml
april-docs/: book.toml
april-docs/src/: SUMMARY.md  concepts.md  csharp.md  models.md  python.md
april-docs/src/april_asr/: example.html  index.html
april-docs/src/csharp/: Doxyfile
april_asr/: example.html  index.html
bindings/csharp/: .gitignore  AprilAsrPINVOKE.cs  AprilModel.cs  AprilSession.cs  AprilToken.cs  README.md  april_asr.nuspec  build.sh
bindings/csharp/AprilAsr/: AprilAsr.csproj  AprilAsrPINVOKE.cs  AprilSession.cs  AprilToken.cs
bindings/csharp/AprilAsrDemo/: AprilAsrDemo.csproj  Program.cs
bindings/csharp/nuget/: AprilAsr.nuspec  build.bat  build.sh
bindings/csharp/nuget/src/: AprilAsrPINVOKE.cs  AprilModel.cs  AprilSession.cs  AprilToken.cs
bindings/csharp/src/: AprilAsrPINVOKE.cs  AprilModel.cs  AprilSession.cs  AprilToken.cs
bindings/java/lib/: .gitignore  settings.gradle
bindings/java/lib/lib/: build.gradle
bindings/java/lib/lib/src/main/java/aprilasr/: AprilAsrNative.java  Model.java  Session.java  Token.java
bindings/java/lib/lib/src/test/java/aprilasr/: LibraryTest.java
bindings/node/: README.md  build.bat  build.sh  package-lock.json  package.json  tsconfig.json
bindings/node/examples/: example.js  example.ts
bindings/node/src/: index.js
bindings/python/: README.md  setup.py
bindings/python/april_asr/: __init__.py  _april.py  _april_c_ffi.py  example.py  example_async.py
bindings/rust/: Cargo.toml  README.md  april_api.h  build.rs
bindings/rust/april_asr/: Cargo.toml  build.rs
bindings/rust/april_asr/src/: bindgen_bindings.rs  lib.rs  main.rs
bindings/rust/examples/: example.rs  multiple_async.rs  single_sync.rs
bindings/rust/src/: lib.rs
cmake/: FindCUDNN.cmake  FindONNXRuntime.cmake  FindTensorRT.cmake  Findonnxruntime.cmake
csharp/html/: annotated.html  class_april_asr_1_1_april_model-members.html  class_april_asr_1_1_april_model.html  class_april_asr_1_1_april_session-members.html  class_april_asr_1_1_april_session.html  classes.html  dir_00240dc4a1a4845ae58be68fbad02d02.html  dir_248944f69945970118c2572d670b1d79.html  dir_381c2e22c472aabb3b00fd0324a6c16d.html  dir_5f80188de5b26d3c2a9277faefe49c11.html  functions.html  functions_func.html  functions_prop.html  index.html  namespace_april_asr.html  namespace_april_asr_1_1_p_i_n_v_o_k_e.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  struct_april_asr_1_1_april_token-members.html  struct_april_asr_1_1_april_token.html
extra/: export-april.py  exporting-howto.md  file-format.md
fft/: fbank.c
share/pkgconfig/: aprilasr.pc.in
src/: april.c  april_model.c  april_model.h  april_session.c  april_session.h  audio_provider.c  audio_provider.h  common.h  fbank.c  fbank.h  init.c  log.h  model_impl.cpp  model_impl.h  ort_util.c  ort_util.h  params.c  params.h  proc_thread.c  proc_thread.h
src/fft/: pocketfft.c  pocketfft.h
src/file/: model_file.c  model_file.h  util.h
src/tinycthread/: tinycthread.c  tinycthread.h
src/tools/: quantize.cpp
