[package]
name = "april_asr"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
email = "fdenzell@gmail.com"
authors = ["fastfists", "abb128"]
documentation = "https://docs.rs/april_asr"
repository = "https://github.com/abb128/april-asr"
description = "Offline open source speech recognition API based on next-generation Kaldi"

[dependencies]
libc = "0.2.144"

[build-dependencies]
bindgen = "0.65.1"
flate2 = "1.0.26"
tar = "0.4.38"
ureq = "2.6.2"
